--- a/trunk/IntraSell_Net/IntraSell_Net/IntraSell_Net.vbproj
+++ b/trunk/IntraSell_Net/IntraSell_Net/IntraSell_Net.vbproj
@@ -67,6 +67,9 @@
     <ApplicationIcon>cashier.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\Components\net-20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.5.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -239,6 +242,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="TestFriends.vb" />
+    <Compile Include="Update\ModuleTestUnzip.vb" />
+    <Compile Include="Update\ModuleUnZip.vb" />
+    <Compile Include="Update\UnzipFiles.vb" />
+    <Compile Include="Update\Update.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Forms\Controls\ArtikelControl.resx">
@@ -375,6 +382,17 @@
   <ItemGroup>
     <Folder Include="Forms\Artikel\" />
     <Folder Include="Forms\Lieferanten\" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="IntraSell">
+      <Guid>{D853BEE6-4123-468E-A072-815695AA8D60}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
