--- a/trunk/IntraSell_Net/IntraSell_Net/IntraSell_Net.vbproj
+++ b/trunk/IntraSell_Net/IntraSell_Net/IntraSell_Net.vbproj
@@ -248,6 +248,7 @@
     <Compile Include="Forms\Vorgaenge\Vorgang.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Interfaces\InterfacePrintable.vb" />
     <Compile Include="Modules\Functions.vb" />
     <Compile Include="Modules\FunctionsDemoVersion.vb" />
     <Compile Include="Modules\FunctionsOnStart.vb" />
@@ -426,9 +427,60 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="Vorlagen\0. BRIEF.dot">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\1. ANFRAGE.dot">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\17. RECHNUNG.dot">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\5. Angebot.dot">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\Vorlage_AuftragBestaetigung.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\Vorlage_Brief.doc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\Vorlage_Paketschein.doc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\Vorlage_Paketschein.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\Vorlage_Paketschein_GeneralParcel.doc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\Vorlage_Rechnung.doc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Vorlagen\Vorlage_Rechnung.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="cashier.ico" />
+    <Content Include="Vorlagen\ISVorgang.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Vorlagen\LieferantenAnfrage.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Vorlagen\TransportAuftrag.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Vorlagen\Vorlage_AuftragBestaetigung.htm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Vorlagen\Vorlage_Rechnung.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Vorlagen\Vorlage_Rechnung_Gutschrift.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
