--- a/IntraSell_Net/IntraSell_Net_UnitTests/IntraSell_Net_UnitTests.vbproj
+++ b/IntraSell_Net/IntraSell_Net_UnitTests/IntraSell_Net_UnitTests.vbproj
@@ -103,14 +103,14 @@
     <Compile Include="DBTest.vb" />
     <Compile Include="Data\grartikelTableAdapterTest.vb" />
     <Compile Include="Data\grartikel_kategorienTableAdapterTest.vb" />
-    <Compile Include="FunctionsVarsTest.vb" />
-    <Compile Include="IntraSellPreiseTest.vb" />
+    <Compile Include="DLL\FunctionsVarsTest.vb" />
+    <Compile Include="DLL\IntraSellPreiseTest.vb" />
     <Compile Include="Modules\ModuleBuchVorgangDruckTest.vb" />
     <Compile Include="Modules\ModuleBuchVorgangXMLTest.vb" />
-    <Compile Include="Modules\ModuleCommonsTest.vb" />
+    <Compile Include="DLL\ModuleCommonsTest.vb" />
     <Compile Include="Modules\ModulePreiseTest.vb" />
     <Compile Include="Modules\ModuleSetupTest.vb" />
-    <Compile Include="ModuleUpdateTest.vb" />
+    <Compile Include="Update\ModuleUpdateTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="Data\ofadressen_zahlungsmethodenTableAdapterTest.vb" />
     <Compile Include="UIMap.Designer.vb">
@@ -121,7 +121,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Modules\ClassDiagram1.cd" />
     <None Include="OrderedTestSetup.orderedtest">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
